# denops-rust

./: Cargo.toml  Cargo.toml   README.md  build.rs
denops-builder/: Cargo.toml  README.md
denops-builder/src/: main.rs
denops-rust/: Cargo.toml
denops-rust/src/: autocmd.rs  console.rs  denops.rs  execute.rs  lib.rs  std.rs  variable.rs  wasm.rs
denops-rust/src/wasm/: console.rs
examples/denops-rust-example/: Cargo.toml  README.md
examples/denops-rust-example/denops/rust/: app.ts  main.ts
examples/denops-rust-example/src/: lib.rs
